; ModuleID = '/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_new.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@strm_event_loop_started = common dso_local global i32 0, align 4
@STRM_STR_INTERN_LIMIT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strm_str_new(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* @strm_event_loop_started, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %24, label %8

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @STRM_STR_INTERN_LIMIT, align 8
  %14 = icmp slt i64 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i8*, i8** %4, align 8
  %17 = call i64 @readonly_data_p(i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15, %11
  %20 = load i8*, i8** %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @str_intern(i8* %20, i64 %21, i32 0)
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %15, %8
  br label %24

24:                                               ; preds = %23, %2
  %25 = load i8*, i8** %4, align 8
  %26 = load i64, i64* %5, align 8
  %27 = call i32 @str_new(i8* %25, i64 %26, i32 0)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %24, %19
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @readonly_data_p(i8*) #1

declare dso_local i32 @str_intern(i8*, i64, i32) #1

declare dso_local i32 @str_new(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
